# openaudible-py

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
docs/superpowers/plans/: 2026-06-14-openaudible-py.md
docs/superpowers/specs/: 2026-06-14-openaudible-py-design.md
src/openaudible/: auth.py  catalog.py  cli.py  client.py  config.py  convert.py  download.py  exporter.py  importer.py  jobs.py  keyfinder.py  models.py  player.py  tag.py  transcribe.py
src/openaudible/tui/: app.py
tests/: conftest.py  test_auth.py  test_catalog.py  test_cli.py  test_client.py  test_config.py  test_convert.py  test_download.py  test_features.py  test_jobs.py  test_keyfinder.py  test_models.py  test_player.py  test_smoke.py  test_tag.py  test_transcribe.py  test_tui.py
