[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openaudible-py"
version = "0.1.0"
description = "Sync, de-DRM, convert and play your Audible library"
requires-python = ">=3.11"
dependencies = [
  "audible>=0.10.0",
  "audible-cli>=0.3.3",
  "typer>=0.12",
  "textual>=8.0",
  "rich>=13",
  "python-mpv>=1.0.7",
  "mutagen>=1.47",
  "playwright>=1.40",
  "rich-pixels>=3.0",
  "pillow>=10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
openaudible = "openaudible.cli:app"
openaudible-tui = "openaudible.tui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
