[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openaudible-py"
version = "0.1.0"
description = "Sync, de-DRM, convert and play your Audible library"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"  # the audible library requires Python <3.13
dependencies = [
  "audible>=0.10.0",
  "audible-cli>=0.3.3",
  "typer>=0.12",
  "textual>=8.0",
  "rich>=13",
  "python-mpv>=1.0.7",
  "mutagen>=1.47",
  "playwright>=1.40",
  "textual-image>=0.12",
  "pillow>=10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
# Local Whisper transcription. mlx-whisper runs on the Apple GPU/ANE (fastest
# on Apple Silicon); openai-whisper is the portable CPU/CUDA fallback.
transcribe = [
  "mlx-whisper>=0.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "openai-whisper>=20231117; not (sys_platform == 'darwin' and platform_machine == 'arm64')",
]

[project.scripts]
openaudible = "openaudible.cli:app"
openaudible-tui = "openaudible.tui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
